# spicedocs-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  RELEASE.md  pyproject.toml  pytest.ini
.devcontainer/: CLAUDE.md  Dockerfile  devcontainer.json  setup-dev-environment.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
src/spicedocs_mcp/: __init__.py  cache.py  server.py
tests/: __init__.py  conftest.py  test_cache.py  test_cache_integration.py  test_concurrency.py  test_security.py  test_server_lifecycle.py  test_tools.py
tests/fixtures/: __init__.py  test_data.py
tests/fixtures/minimal_archive/: index.html  page_kernels.html  page_links.html  page_time.html
tests/fixtures/minimal_archive/subdir/: nested.html
tests/fixtures/minimal_archive/subdir/deep/: deeper.html
